# Shotwell

./: .gitignore  BUILDING  CMakeLists.txt  Info.plist  LICENSE  Makefile  README.md  env.sh  plugins.md  vendor.sh
assets/: album-icon.ai  dock.ai
assets/en.lproj/: MainMenu.xib
design/: experience.txt  protocol.txt
design/brand/: audio-terms.txt  brand.txt  collection-terms.txt  emotive-terms.txt  intelligence-terms.txt  potential-names.txt
src/: AppDelegate.h  AppDelegate.mm  AudioSink.h  AudioSource.h  AutomaticPathsEditor.h  AutomaticPathsEditor.mm  CMakeLists.txt  Chroma.mm  Chromaprint.mm  CoreAudioSink.h  CoreAudioSink.mm  CoverArtScraper.h  CoverArtScraper.mm  Daemon.h  Daemon.mm  DaemonBrowser.h  DaemonBrowser.mm  Dict.h  Dict.mm  Enum.mm  Event.mm  HTTP.h  HTTP.mm  HTTPRequest.h  HTTPRequest.mm  HTTPResponse.h  HTTPResponse.mm  ITunesScan.h  ITunesScan.mm  JSON.h  JSON.mm  Level.mm  LibAVSource.h  LibAVSource.mm  Library.h  Library.mm  LibraryPopUpButton.h  LibraryPopUpButton.mm  LocalLibrary.h  LocalLibrary.mm  (+79 more)
src/Resources/: album-icon.ai  album.ai  example.js
src/Resources/Plugins/Marquee/: index.html  main.css  main.js
src/Resources/Plugins/Marquee/bootstrap-2.0.2/css/: bootstrap.css
src/Resources/en.lproj/: MainMenu.xib
src/app/: AES.h  AES.mm  AV.h  AV.mm  AlbumBrowser.h  AlbumBrowser.mm  AppDelegate.h  AppDelegate.mm  AppleCoverArtClient.h  AppleCoverArtClient.mm  ArtistBrowser.h  ArtistBrowser.mm  AudioSink.h  AudioSource.h  AudioSource.mm  AutomaticPathsEditor.h  AutomaticPathsEditor.mm  Base64.h  Base64.mm  BitBuffer.h  BitBuffer.mm  Chromaprint.h  Chromaprint.mm  CoreAudioSink.h  CoreAudioSink.mm  CoverArtScraper.mm  CoverBrowser.h  CoverBrowser.mm  Daemon.mm  Dict.mm  Enum.h  Enum.mm  Event.h  Event.mm  HTTP.h  HTTP.mm  HTTPRequest.h  HTTPRequest.mm  HTTPResponse.mm  ITunesScan.h  (+105 more)
src/app/pb/: Track.pb.cc  Track.pb.h  Track.proto
src/assets/: Play.ai  dock.icns  speaker.ai
src/assets/Plugins/Marquee/: main.css
src/assets/TrackDetailView/: index.html  main.css  main.js
src/lib/: av.h  base64.cc  daemon.cc  daemon.h  library.cc  library.h  movie.cc  movie.h  packet_chan.cc  raop.cc  raop.h  track.cc  track.h  track.pb.cc  track.pb.h  util.cc
src/lib/old/: packet_queue.h
src/mac/: AppDelegate.h  AppDelegate.mm  Info.plist  MD1Application.h  MD1Application.mm  MD1Slider.h  MD1Slider.mm  main.m
src/mac/res/en.lproj/: MainMenu.xib
src/md0/: AES.mm  AppDelegate.h  AppDelegate.mm  AppleCoverArtClient.h  AppleCoverArtClient.mm  AudioSink.h  AudioSource.h  AudioSource.mm  Base64.h  Base64.mm  CoreAudioSink.h  CoreAudioSink.mm  CoverArt.h  CoverArt.mm  Daemon.h  Daemon.mm  Event.h  HTTP.h  HTTP.mm  ITunesScan.mm  JSON.h  JSON.mm  Level.h  Level.mm  LibAVSource.h  LibAVSource.mm  Library.h  Library.mm  LocalLibrary.h  LocalLibrary.mm  Log.h  Log.mm  Loop.h  Loop.mm  MarqueePlugin.h  MarqueePlugin.mm  Movie.h  Movie.mm  NSDataCrypto.h  NSDataCrypto.mm  (+37 more)
src/md0/lib/: audio_sink.h  audio_source.h  av.cc  buffer.h  chan.cc  chan.h  daemon.cc  daemon.h  frame.h  library.h  local_library.cc  local_library.h  log.cc  log.h  movie.cc  movie.h  packet_chan.h  play.h  raop.cc  raop.h  remote_library.cc  remote_library.h  sdl.cc  sdl.h  track.cc  track.h  track.pb.cc  track.pb.h  track.proto  util.h
src/md0/lib/old/: play.cc  raop_client.c  raop_client.h  rtsp_client.c  rtsp_client.h
src/md0/mac/: AppDelegate.h  AppDelegate.mm  Service.h  Slider.h
src/md0/mac/res/: md0dock.ai
src/md0/mac/res/en.lproj/: MainMenu.xib
src/md0/res/Plugins/Marquee/: index.html  main.css  main.js
src/md0/res/en.lproj/: MainMenu.xib
src/md0/test/: track_test.cc
src/test/: test-json.mm  test-locallibrary.mm  test.mm  track_test.cc
src/tools/: raoptest.cc
